# result-companion

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TOON_EVALUATION.md  poc_pr_review.py  pyproject.toml  tasks.py  test_chunking_claude_4_6_opus.py  test_copilot_diagnostics.py  test_startup_timeout.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  publish.yml
examples/: EXAMPLES.md  PR_REVIEW.md  copilot_config.yaml  google_gemini_config.yaml  tag_filtering_config.yaml
examples/configs/: anthropic_config.yaml  azure_config.yaml  bedrock_config.yaml  copilot_config.yaml  custom_endpoint_config.yaml  gemini_config.yaml  ollama_config.yaml  openai_config.yaml  tag_filtering_config.yaml
examples/run_test/: output.xml
fixtures/robot/suite_setup_teardown/: __init__.robot
fixtures/robot/suite_setup_teardown/failing_setup/: __init__.robot  test_skipped.robot
fixtures/robot/suite_setup_teardown/failing_teardown/: __init__.robot  test_runs.robot
fixtures/robot/suite_setup_teardown/passing_setup/: __init__.robot  test_normal.robot
fixtures/robot/suite_setup_teardown/passing_setup/deeply_nested/: __init__.robot  test_deep.robot
result_companion/: __init__.py  api.py
result_companion/_internal/: analysis_helpers.py
result_companion/analizers/: common.py  factory_common.py
result_companion/analizers/local/: ollama_runner.py
result_companion/chunking/: chunking.py  utils.py
result_companion/cli/: cli_app.py  run_factory_splitting.py
result_companion/configs/: default_config.yaml
result_companion/core/: copilot_client.py  rc_paths.py  review.py  state_dir.py
result_companion/core/analizers/: common.py  factory_common.py  llm_router.py  models.py
result_companion/core/analizers/local/: ollama_install.py  ollama_runner.py  ollama_server_manager.py
result_companion/core/analizers/remote/: __init__.py  copilot.py  copilot_runner.py
result_companion/core/assistant/: stream_chat.py
result_companion/core/chunking/: chunking.py  rf_chunker.py  rf_results.py  utils.py
result_companion/core/configs/: default_assistant_config.yaml  default_config.yaml  default_review_config.yaml
result_companion/core/html/: html_creator.py  llm_injector.py  result_writer.py  robot_writers_inheritance.py  test_llm_full_log.html
result_companion/core/html/templates/: llm_template.html  model.js
result_companion/core/parsers/: config.py  result_parser.py
result_companion/core/results/: analysis_result.py  test_filter.py  text_report.py  visitors.py
result_companion/core/review/: pr_reviewer.py
result_companion/core/utils/: __init__.py  llm_debug.py  log_levels.py  logging_config.py  progress.py
result_companion/entrypoints/: run_factory_splitting.py  run_rc.py
result_companion/entrypoints/cli/: assistant_runner.py  cli_app.py
result_companion/html/: html_creator.py  robot_writers_inheritance.py
result_companion/html/templates/: llm_template.html
result_companion/parsers/: cli_parser.py  config.py  result_parser.py
result_companion/utils/: logging_config.py  utils.py
tests/integration/: conftest.py
tests/integration/analizers/: test_ollama_runner_e2e.py
tests/integration/api/: test_suite_setup_failure_collapsing.py
tests/integration/api/fixtures/: output_nested_setups.xml
tests/integration/core/analizers/: test_llm_router.py
tests/integration/core/analizers/remote/: test_copilot_e2e.py
tests/integration/core/chunking/: test_chunking_repr.py
tests/integration/core/parsers/: test_result_parser.py
tests/integration/core/review/: test_review_flow.py
tests/integration/e2e/: test_entrypoints.robot
tests/integration/e2e/neasted_suite/: test_neasted.robot
tests/unittests/: test_api.py
tests/unittests/analizers/: test_common.py  test_factory_common.py
tests/unittests/analizers/local/: test_ollama_runner.py
tests/unittests/chunking/: test_chunking.py  test_utils.py
tests/unittests/cli/: test_cli_app.py  test_run_factory_splitting.py
tests/unittests/core/: test_copilot_client.py  test_rc_paths.py  test_state_dir.py
tests/unittests/core/analizers/: test_common.py  test_factory_common.py  test_llm_router.py
tests/unittests/core/analizers/local/: test_ollama_install.py  test_ollama_runner.py  test_ollama_server_manager.py
tests/unittests/core/analizers/remote/: __init__.py  test_copilot.py
tests/unittests/core/assistant/: test_stream_chat.py
tests/unittests/core/chunking/: test_chunking.py  test_rf_results.py  test_utils.py
tests/unittests/core/html/: test_html_creator.py  test_llm_injector.py  test_result_writer.py
tests/unittests/core/parsers/: tagged_tests.xml  test_config.py  test_result_parser.py
tests/unittests/core/results/: test_analysis_result.py  test_test_filter.py  test_text_report.py  test_visitors.py
tests/unittests/core/review/: test_pr_reviewer.py
tests/unittests/core/utils/: test_llm_debug.py  test_llm_debug_writer.py  test_logging_config.py  test_progress.py
tests/unittests/entrypoints/: test_run_factory_splitting.py  test_run_rc.py
tests/unittests/entrypoints/cli/: test_cli_app.py
tests/unittests/html/: test_html_creator.py
tests/unittests/parsers/: test_cli_parser.py  test_config.py  test_result_parser.py
