[tool.poetry]
name = "result-companion"
version = "0.0.2"
description = "AI-powered analysis of Robot Framework test failures - instant insights from output.xml"
authors = ["Milosz Trojanowski <mil.troj@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/miltroj/result-companion"
repository = "https://github.com/miltroj/result-companion"
keywords = ["robotframework", "testing", "ai", "llm", "test-analysis", "ollama", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
packages = [{include = "result_companion"}]

[tool.poetry.dependencies]
python = "^3.10"
robotframework = "^7.1.1"
typer = "^0.15.1"
ollama = "^0.4.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
litellm = "^1.59"
tiktoken = "^0.8.0"
tqdm = "^4.67.1"

[tool.poetry.scripts]
result-companion = "result_companion.entrypoints.cli.cli_app:app"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.13.0"
pytest = "^8.3.3"
invoke = "^2.2.0"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.24.0"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
