[tool.poetry]
name = "result-companion"
version = "0.0.4"
description = "AI-powered analysis of Robot Framework test failures - instant insights from output.xml"
authors = ["Milosz Trojanowski <mil.troj@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/miltroj/result-companion"
repository = "https://github.com/miltroj/result-companion"
keywords = ["robotframework", "testing", "ai", "llm", "test-analysis", "ollama", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
packages = [{include = "result_companion"}]

[tool.poetry.dependencies]
python = "^3.10"
robotframework = "^7.1.1"
typer = "^0.15.1"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
tqdm = "^4.67.1"
langchain-core = "^0.3.0"
langchain-text-splitters = "^0.3.4"
tiktoken = "^0.8.0"

# Optional provider dependencies
langchain-ollama = {version = "^0.2.1", optional = true}
ollama = {version = "^0.4.0", optional = true}
langchain-openai = {version = "^0.2.11", optional = true}
langchain-aws = {version = "^0.2.10", optional = true}
langchain-google-genai = {version = "^2.1.6", optional = true}
langchain-anthropic = {version = "^0.3.7", optional = true}
github-copilot-sdk = {version = "^0.1.0", optional = true}

[tool.poetry.extras]
ollama = ["langchain-ollama", "ollama"]
openai = ["langchain-openai"]
aws = ["langchain-aws"]
google = ["langchain-google-genai"]
anthropic = ["langchain-anthropic"]
copilot = ["github-copilot-sdk"]
all = [
    "langchain-ollama", "ollama",
    "langchain-openai",
    "langchain-aws",
    "langchain-google-genai",
    "langchain-anthropic",
    "github-copilot-sdk",
]

[tool.poetry.scripts]
result-companion = "result_companion.entrypoints.cli.cli_app:app"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.13.0"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.24.0"
pre-commit = "^4.1.0"
langchain-community = "^0.3.9"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests requiring real Copilot CLI connection",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
